--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "diplom_node",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index",
@@ -25,5 +24,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
